@@ -1,5 +1,5 @@
-library(Matrix)
-library(lattice)
+library(Matrix)# well, library(lme4), ...
+require(lattice)# (is there anyway)
 options(show.signif.stars = FALSE)
 
 (fm1 <- lmer(Reaction ~ Days + (Days|Subject), sleepstudy))
@@ -19,14 +19,14 @@ options(show.signif.stars = FALSE)
 
 ## PQL is used per default:
 fm3. <- lmer(decrease ~ treatment + (1|rowpos) + (1|colpos),
-             OrchardSprays, family = poisson())
+             OrchardSprays, family = poisson)
 fm3.@call <- fm3@call # so that they should be almost identical:
 ##MM: 'tol=0' now (2006-05-24) fails (on 32-bit Ubuntu; not 64-bit RHEL 4) ???
 stopifnot(all.equal(fm3, fm3., tol = 1e-6))
 
 ## Laplace approximation {takes time}
 (fm4 <- lmer(decrease ~ treatment + (1|rowpos) + (1|colpos),
-              OrchardSprays, poisson(), method = "Laplace"))
+             data = OrchardSprays, family = poisson(), method = "Laplace"))
 
 ## Simple example by Andrew Gelman (2006-01-10) ----
 n.groups <- 10 ; n.reps <- 2
@@ -113,6 +113,10 @@ reg <- lmer(y ~ habitat + (1|habitat*lagoon), data = dat) # did seg.fault
 ## From: Andrew Gelman <gelman@stat.columbia.edu>
 ## Date: Wed, 18 Jan 2006 22:00:53 -0500
 
+has.coda <- require(coda)
+if(!has.coda)
+    cat("'coda' package not available; some outputs will look suboptimal\n")
+
 ## Very simple example
 y <- 1:10
 group <- gl(2,5)
@@ -134,6 +138,11 @@ M2 <- lmer (y ~ x + ( x | group))#  false convergence -> simulation doesn't work
 if(FALSE) ## try(..) fails here (in R CMD check) [[why ??]]
     mcmcsamp (M2, saveb=TRUE)
 ## Error: inconsistent degrees of freedom and dimension ...
+
+## mcmc for glmer:
+rG1k <- mcmcsamp(fm3., n = 1000)
+summary(rG1k)
+rG2 <- mcmcsamp(fm4, n = 3, verbose = TRUE)
 
 cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
 
